# ice1000

./: .gitignore  README.md  ice1000.cabal
app/: Core.hs  Main.hs  Parser.hs  Scope.hs  Typecheck.hs  UTLC.hs  Utils.hs
