cabal-version:      2.4
name:               ice1000
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trebor-Huang
maintainer:         2300936257@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable ice1000
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Scope
        Core
        Typecheck

    default-extensions:
        DeriveTraversable,
        DeriveGeneric,
        GeneralizedNewtypeDeriving,
        PatternSynonyms,
        LambdaCase,
        MultiParamTypeClasses

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        bifunctors,
        transformers,
        containers
    hs-source-dirs:   app
    default-language: Haskell2010
